fixes spacing on mobile

--- a/sass/main-elements/header.scss
+++ b/sass/main-elements/header.scss
@@ -143,8 +143,9 @@ a.sticky-logo {
 		margin-bottom: 30px;
 		max-width:100vw !important;
 		.container {
-		display: block !important;
-	}	
+			display: flex !important;
+			justify-content: space-between;
+		}	
 	}
 
 	a.sticky-logo {
@@ -155,13 +156,13 @@ a.sticky-logo {
 	}
 
 	.fixed-logo {
-	 a.sticky-logo {
-	    display: block;
-	    text-align: center;
-	    margin: -60px auto 20px;
+		a.sticky-logo {
+	    	display: block;
+	    	text-align: center;
+	    	margin: -60px auto 20px;
+		}
 	}
 
-}
 	.mobile-menu-button.hide-on-desktop {
     	display: block !important;
     	z-index: 99999;
@@ -170,23 +171,23 @@ a.sticky-logo {
 		}
 	}
 
-.menu {
-    -webkit-box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 40%);
-    -moz-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.4);
-    box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 40%);
-    background: #fce4e9;
-    display: none;
-    left: 0;
-    padding-bottom: 20px;
-    padding-top: 40px;
-    padding-left: 10px;
-    padding-right: 10px;    
-    position: fixed;
-    right: 0;
-    top: 0;
-    z-index: 1;
-}
-.mobile-menu-open {
+	.menu {
+		-webkit-box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 40%);
+		-moz-box-shadow: 0px 10px 15px 0px rgba(0, 0, 0, 0.4);
+		box-shadow: 0px 10px 15px 0px rgb(0 0 0 / 40%);
+		background: #fce4e9;
+		display: none;
+		left: 0;
+		padding-bottom: 20px;
+		padding-top: 40px;
+		padding-left: 10px;
+		padding-right: 10px;    
+		position: fixed;
+		right: 0;
+		top: 0;
+		z-index: 1;
+	}
+	.mobile-menu-open {
 		body {
 		    overflow: hidden;
 		}
@@ -209,21 +210,23 @@ a.sticky-logo {
 		 }
 
 		header.main-header nav.main-navigation ul {
-    		    padding: 0;
-			    display: grid;
-			    grid-template-columns: auto auto;
-			    gap: 20px;
-			    margin-top: 50px;
-				justify-content: space-evenly;      
-		}
-		header.main-header nav.main-navigation ul li {
-		        margin-left:0px;
-		    
-		}
-		header.main-header nav.main-navigation ul li a {
+			padding: 0;
+			display: grid;
+			grid-template-columns: auto auto;
+			gap: 20px;
+			margin-top: 50px;
+			justify-content: space-evenly;      
+			padding-bottom: 40px;
+			padding-top: 40px;
+			li {
+				margin-left:0px;
+				a {
 
-		    line-height: 17px;
-		    text-align: center;
+					line-height: 17px;
+					text-align: center;
+				}
+			
+			}
 		}
 	}
 
